[project]
name = "a-c-e"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.48.2",
    "datasets>=4.4.1",
    "ddgs>=9.9.3",
    "faiss-cpu>=1.13.1",
    "gradio>=6.1.0",
    "groq>=0.37.1",
    "langchain>=1.1.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.1.3",
    "langchain-experimental>=0.4.1",
    "langchain-groq>=1.1.0",
    "langchain-huggingface>=1.1.0",
    "langchain-openai>=1.1.1",
    "langgraph>=1.0.4",
    "pydantic>=2.12.4",
    "rich>=14.2.0",
    "transformers>=4.57.3",
]
